testsuite/tests/typecheck/should_fail/T8514.hs
module T8514 where

type T a = (a, Maybe)
